# bdk_wallet

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/ISSUE_TEMPLATE/: minor_release.md
.github/workflows/: code_coverage.yml  cont_integration.yml  fuzz.yml  zizmor.yml
ci/: pin-msrv.sh
docs/adr/: 0004_birthday.md
examples/: Cargo.toml  README.md  bip329_example.rs  bip329_labels.rs  bitcoind_rpc.rs  bitcoind_rpc_filter.rs  compiler.rs  cpfp.rs  electrum.rs  esplora_async.rs  esplora_blocking.rs  esplora_custom_timeout.rs  esplora_with_timeout.rs  hwi_signer.rs  mnemonic_to_descriptors.rs  policy.rs  psbt.rs  rbf.rs  replace_by_fee.rs
examples/example_wallet_bdk_tx/: Cargo.toml
examples/example_wallet_bdk_tx/src/: main.rs
examples/example_wallet_electrum/: Cargo.toml
examples/example_wallet_electrum/src/: main.rs
examples/example_wallet_esplora_async/: Cargo.toml
examples/example_wallet_esplora_async/src/: main.rs
examples/example_wallet_esplora_blocking/: Cargo.toml
examples/example_wallet_esplora_blocking/src/: main.rs
examples/example_wallet_hwi_signer/: Cargo.toml  README.md
examples/example_wallet_hwi_signer/src/: main.rs
examples/example_wallet_rpc/: Cargo.toml  README.md  justfile
examples/example_wallet_rpc/src/: main.rs
examples/multi_keychain/: address_generation.rs  balance_tracking.rs  migration_guide.rs  persistence.rs
fuzz/: Cargo.toml  README.md  benchmark_performance.md
fuzz/fuzz_targets/: apply_update.rs  bdk_wallet.rs  bdk_wallet_optimized.rs  create_tx.rs  descriptor_parse.rs
fuzz/src/: arbitrary_types.rs  arbitrary_types_optimized.rs  lib.rs
src/: lib.rs  persist_test_utils.rs  test_utils.rs  types.rs
src/descriptor/: checksum.rs  dsl.rs  error.rs  mod.rs  policy.rs  template.rs
src/keyring/: changeset.rs  error.rs  migration.rs  mod.rs
src/keys/: bip39.rs  mod.rs
src/psbt/: mod.rs  params.rs
src/wallet/: changeset.rs  coin_selection.rs  dns_tx_builder.rs  error.rs  event.rs  export.rs  labels.rs  locked_outpoints.rs  migration.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs  utils.rs
tests/: add_foreign_utxo.rs  build_fee_bump.rs  changeset.rs  common.rs  drain_to_dust_pull_utxo.rs  labels.rs  min_output_value.rs  persisted_wallet.rs  psbt.rs  wallet.rs  wallet_event.rs
wallet/: CHANGELOG.md  Cargo.toml  README.md
wallet/examples/: bip329_example.rs  compiler.rs  intent_tracker.rs  keyring.rs  policy.rs  psbt.rs  replace_by_fee.rs
wallet/src/: lib.rs  multi_keychain.rs  test_utils.rs  types.rs
wallet/src/descriptor/: error.rs  mod.rs  policy.rs  template.rs
wallet/src/keyring/: mod.rs
wallet/src/keys/: mod.rs
wallet/src/multi_keychain/: changeset.rs  keyring.rs  wallet.rs
wallet/src/psbt/: mod.rs  params.rs
wallet/src/wallet/: broadcast_queue.rs  changeset.rs  coin_selection.rs  error.rs  export.rs  intent_tracker.rs  locked_outpoints.rs  mod.rs  params.rs  persisted.rs  psbt_params.rs  signer.rs  tx_builder.rs  unbroadcasted.rs  utils.rs
wallet/tests/: add_foreign_utxo.rs  persisted_wallet.rs  psbt.rs  wallet.rs
