[workspace]
resolver = "2"
members = [
    "wallet",
    "fuzz",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk_wallet"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
bdk_wallet = { path = "./wallet", version = "3.0.0-alpha.0" }

# External dependencies
bitcoin = { version = "0.32.7", features = ["serde", "base64"], default-features = false }
miniscript = { version = "12.3.1", features = ["serde"], default-features = false }
bdk_chain = { version = "0.23.1", features = ["miniscript", "serde"], default-features = false }