[workspace]
resolver = "2"
members = [
    "example_wallet_electrum",
    "example_wallet_esplora_async",
    "example_wallet_esplora_blocking",
    "example_wallet_rpc"
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
