[package]
name = "bdk_wallet_fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
bdk_wallet = { path = "..", features = ["test-utils"] }

# Needed for accessing bitcoin types directly
bitcoin = { version = "0.32.8" }

[[bin]]
name = "apply_update"
path = "fuzz_targets/apply_update.rs"
test = false
doc = false
bench = false

[[bin]]
name = "create_tx"
path = "fuzz_targets/create_tx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "descriptor_parse"
path = "fuzz_targets/descriptor_parse.rs"
test = false
doc = false
bench = false
