[package]
name = "example_wallet_electrum"
version = "0.2.0"
edition = "2021"

[dependencies]
bdk_wallet = { path = "../../wallet", features = ["file_store"] }
#bdk_electrum = { version = "0.21" }
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "b70758652d1c819c88d92765905d09e26b951ee2" }
anyhow = "1"
