[package]
name = "example_wallet_esplora_async"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_wallet = { path = "../../wallet", features = ["rusqlite"] }
bdk_esplora = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "fd5b8152fdb49b3d457ec4c92591bdc45f00f43f", features = ["async-https", "tokio"] }
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
