[package]
name = "example_wallet_hwi_signer"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[features]
simulator = ["bitbox-api", "bitbox-api/simulator"]

[dependencies]
bdk_wallet = { path = "../../wallet", features = ["file_store"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
bitbox-api = {version = "0.6.0", features = ["tokio"], optional = true}
async-hwi = { version = "0.0.27", features = ["bitbox"]}
anyhow = "1"