[package]
name = "example_wallet_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_wallet = { path = "../../wallet", features = ["file_store"] }
#bdk_bitcoind_rpc = { version = "0.18" }
bdk_bitcoind_rpc = { git = "https://github.com/bitcoindevkit/bdk", rev = "b70758652d1c819c88d92765905d09e26b951ee2" }

anyhow = "1"
clap = { version = "4.5.17", features = ["derive", "env"] }
ctrlc = "2.0.1"
